--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
-spring.datasource.password=0922017974
+spring.datasource.password=0905346772
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 
 #config view engine
-# spring.mvc.view.prefix=/WEB-INF/view/
-# spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
